fix(styles): fixed ButtonBackTop z-index; now, if Drawer is open, button is hidden under the Drawer

--- a/apps/frontend/src/components/ButtonBackTop/ButtonBackTop.module.scss
+++ b/apps/frontend/src/components/ButtonBackTop/ButtonBackTop.module.scss
@@ -12,7 +12,7 @@
   background: $green-primary;
   box-shadow: 0 8px 20px rgb(0 0 0 / 7%);
   opacity: 80%;
-  z-index: 101;
+  z-index: 20;
   transition: opacity 50ms ease-in;
 
   &:hover {
